--- a/pycocoEvalDemo.ipynb
+++ b/pycocoEvalDemo.ipynb
@@ -20,11 +20,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import datetime as dt\n",
+    "import json\n",
+    "import logging\n",
+    "from typing import Any, Dict\n",
+    "\n",
+    "from PIL import Image\n",
+    "import requests\n",
+    "from shapely import wkt\n",
+    "from shapely.geometry import Polygon\n",
+    "\n",
+    "\n",
+    "\n",
+    "def from_json(labeled_data, coco_output, label_format='WKT'):\n",
+    "    \"Writes labelbox JSON export into MS COCO format.\"\n",
+    "    # read labelbox JSON output\n",
+    "    with open(labeled_data, 'r') as file_handle:\n",
+    "        label_data = json.loads(file_handle.read())\n",
+    "\n",
+    "    # setup COCO dataset container and info\n",
+    "    coco = make_coco_metadata(label_data[0]['Project Name'], label_data[0]['Created By'],)\n",
+    "\n",
+    "    for data in label_data:\n",
+    "        # Download and get image name\n",
+    "        try:\n",
+    "            add_label(coco, data['ID'], data['Labeled Data'], data['Label'], label_format)\n",
+    "        except requests.exceptions.MissingSchema as exc:\n",
+    "            LOGGER.warning(exc)\n",
+    "            continue\n",
+    "        except requests.exceptions.ConnectionError:\n",
+    "            LOGGER.warning('Failed to fetch image from %s, skipping', data['Labeled Data'])\n",
+    "            continue\n",
+    "\n",
+    "    with open(coco_output, 'w+') as file_handle:\n",
+    "        file_handle.write(json.dumps(coco))\n",
+    "\n",
+    "\n",
+    "def make_coco_metadata(project_name: str, created_by: str) -> Dict[str, Any]:\n",
+    "    \"\"\"Initializes COCO export data structure.\n",
+    "    Args:\n",
+    "        project_name: name of the project\n",
+    "        created_by: email of the project creator\n",
+    "    Returns:\n",
+    "        The COCO export represented as a dictionary.\n",
+    "    \"\"\"\n",
+    "    return {\n",
+    "        'info': {\n",
+    "            'year': dt.datetime.now(dt.timezone.utc).year,\n",
+    "            'version': None,\n",
+    "            'description': project_name,\n",
+    "            'contributor': created_by,\n",
+    "            'url': 'labelbox.com',\n",
+    "            'date_created': dt.datetime.now(dt.timezone.utc).isoformat()\n",
+    "        },\n",
+    "        'images': [],\n",
+    "        'annotations': [],\n",
+    "        'licenses': [],\n",
+    "        'categories': []\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "def add_label(\n",
+    "        coco: Dict[str, Any], label_id: str, image_url: str,\n",
+    "        labels: Dict[str, Any], label_format: str):\n",
+    "    \"\"\"Incrementally updates COCO export data structure with a new label.\n",
+    "    Args:\n",
+    "        coco: The current COCO export, will be incrementally updated by this method.\n",
+    "        label_id: ID for the instance to write\n",
+    "        image_url: URL to download image file from\n",
+    "        labels: Labelbox formatted labels to use for generating annotation\n",
+    "        label_format: Format of the labeled data. Valid options are: \"WKT\" and\n",
+    "                      \"XY\", default is \"WKT\".\n",
+    "    Returns:\n",
+    "        The updated COCO export represented as a dictionary.\n",
+    "    \"\"\"\n",
+    "    image = {\n",
+    "        \"id\": label_id,\n",
+    "        \"file_name\": image_url,\n",
+    "        \"license\": None,\n",
+    "        \"flickr_url\": image_url,\n",
+    "        \"coco_url\": image_url,\n",
+    "        \"date_captured\": None,\n",
+    "    }\n",
+    "    response = requests.get(image_url, stream=True, timeout=1.0)\n",
+    "    response.raw.decode_content = True\n",
+    "    image['width'], image['height'] = Image.open(response.raw).size\n",
+    "\n",
+    "    coco['images'].append(image)\n",
+    "\n",
+    "    # remove classification labels (Skip, etc...)\n",
+    "    if not callable(getattr(labels, 'keys', None)):\n",
+    "        return\n",
+    "\n",
+    "    # convert label to COCO Polygon format\n",
+    "    for category_name, label_data in labels.items():\n",
+    "        try:\n",
+    "            # check if label category exists in 'categories' field\n",
+    "            category_id = [c['id']\n",
+    "                           for c in coco['categories']\n",
+    "                           if c['supercategory'] == category_name][0]\n",
+    "        except IndexError:\n",
+    "            category_id = len(coco['categories']) + 1\n",
+    "            category = {\n",
+    "                'supercategory': category_name,\n",
+    "                'id': category_id,\n",
+    "                'name': category_name\n",
+    "            }\n",
+    "            coco['categories'].append(category)\n",
+    "\n",
+    "        polygons = _get_polygons(label_format, label_data)\n",
+    "        _append_polygons_as_annotations(coco, image, category_id, polygons)\n",
+    "\n",
+    "\n",
+    "def _append_polygons_as_annotations(coco, image, category_id, polygons):\n",
+    "    \"Adds `polygons` as annotations in the `coco` export\"\n",
+    "    for polygon in polygons:\n",
+    "        segmentation = []\n",
+    "        for x_val, y_val in polygon.exterior.coords:\n",
+    "            segmentation.extend([x_val, y_val])\n",
+    "\n",
+    "        annotation = {\n",
+    "            \"id\": len(coco['annotations']) + 1,\n",
+    "            \"image_id\": image['id'],\n",
+    "            \"category_id\": category_id,\n",
+    "            \"segmentation\": [segmentation],\n",
+    "            \"area\": polygon.area,  # float\n",
+    "            \"bbox\": [polygon.bounds[0], polygon.bounds[1],\n",
+    "                     polygon.bounds[2] - polygon.bounds[0],\n",
+    "                     polygon.bounds[3] - polygon.bounds[1]],\n",
+    "            \"iscrowd\": 0\n",
+    "        }\n",
+    "\n",
+    "        coco['annotations'].append(annotation)\n",
+    "\n",
+    "\n",
+    "def _get_polygons(label_format, label_data):\n",
+    "    \"Converts segmentation `label: String!` into polygons\"\n",
+    "    if label_format == 'WKT':\n",
+    "        if isinstance(label_data, list):  # V3\n",
+    "            polygons = map(lambda x: wkt.loads(x['geometry']), label_data)\n",
+    "        else:  # V2\n",
+    "            polygons = wkt.loads(label_data)\n",
+    "    elif label_format == 'XY':\n",
+    "        polygons = []\n",
+    "        for xy_list in label_data:\n",
+    "            if 'geometry' in xy_list:  # V3\n",
+    "                xy_list = xy_list['geometry']\n",
+    "\n",
+    "                # V2 and V3\n",
+    "                if not isinstance(xy_list, list):\n",
+    "                    LOGGER.warning('Could not get an point list to construct polygon, skipping')\n",
+    "                    continue\n",
+    "            else:  # V2, or non-list\n",
+    "                if not isinstance(xy_list, list) or not xy_list or 'x' not in xy_list[0]:\n",
+    "                    # skip non xy lists\n",
+    "                    LOGGER.warning('Could not get an point list to construct polygon, skipping')\n",
+    "                    continue\n",
+    "\n",
+    "            if len(xy_list) > 2:  # need at least 3 points to make a polygon\n",
+    "                polygons.append(Polygon(map(lambda p: (p['x'], p['y']), xy_list)))\n",
+    "    else:\n",
+    "        exc = UnknownFormatError(label_format=label_format)\n",
+    "        LOGGER.exception(exc.message)\n",
+    "        raise exc\n",
+    "\n",
+    "    return polygons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'encode'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-320fa7182745>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mlb2coco\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_json\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;34m'./testexport.json'\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0;34m'./test.json'\u001b[0m  \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/labelbox/exporters/coco_exporter.py\u001b[0m in \u001b[0;36mfrom_json\u001b[0;34m(labeled_data, coco_output, label_format)\u001b[0m\n\u001b[1;32m     31\u001b[0m         \u001b[0;31m# Download and get image name\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m             \u001b[0madd_label\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcoco\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'ID'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Labeled Data'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Label'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel_format\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexceptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMissingSchema\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mexc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m             \u001b[0mLOGGER\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/labelbox/exporters/coco_exporter.py\u001b[0m in \u001b[0;36madd_label\u001b[0;34m(coco, label_id, image_url, labels, label_format)\u001b[0m\n\u001b[1;32m    120\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    121\u001b[0m         \u001b[0mpolygons\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_get_polygons\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabel_format\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 122\u001b[0;31m         \u001b[0m_append_polygons_as_annotations\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcoco\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcategory_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpolygons\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    123\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    124\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/labelbox/exporters/coco_exporter.py\u001b[0m in \u001b[0;36m_append_polygons_as_annotations\u001b[0;34m(coco, image, category_id, polygons)\u001b[0m\n\u001b[1;32m    125\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0m_append_polygons_as_annotations\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcoco\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcategory_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpolygons\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    126\u001b[0m     \u001b[0;34m\"Adds `polygons` as annotations in the `coco` export\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 127\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mpolygon\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpolygons\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    128\u001b[0m         \u001b[0msegmentation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    129\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mx_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_val\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpolygon\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexterior\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoords\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/labelbox/exporters/coco_exporter.py\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m    149\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlabel_format\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'WKT'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    150\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabel_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# V3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 151\u001b[0;31m             \u001b[0mpolygons\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mwkt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'geometry'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    152\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# V2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    153\u001b[0m             \u001b[0mpolygons\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwkt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabel_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/shapely/wkt.py\u001b[0m in \u001b[0;36mloads\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;34m\"\"\"Load a geometry from a WKT string.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mgeos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mWKTReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgeos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlgeos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/shapely/geos.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, text)\u001b[0m\n\u001b[1;32m    248\u001b[0m         \u001b[0;34m\"\"\"Returns geometry from WKT\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    249\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mversion_info\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 250\u001b[0;31m             \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ascii'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    251\u001b[0m         \u001b[0mgeom\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_lgeos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGEOSWKTReader_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc_char_p\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    252\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mgeom\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'encode'"
+     ]
+    }
+   ],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'skimage'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-a069c6dbc25b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpycocotools\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcocoeval\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCOCOeval\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mskimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mio\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mio\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpylab\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mpylab\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrcParams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'figure.figsize'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m10.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m8.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'skimage'"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
@@ -33,7 +246,7 @@
     "import numpy as np\n",
     "import skimage.io as io\n",
     "import pylab\n",
-    "pylab.rcParams['figure.figsize'] = (10.0, 8.0)"
+    "pylab.rcParams['figure.figsize'] = (10.0, 8.0)\n"
    ]
   },
   {
@@ -169,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
