add test export

--- a/pycocoEvalDemo.ipynb
+++ b/pycocoEvalDemo.ipynb
@@ -35,8 +35,6 @@
     "from shapely import wkt\n",
     "from shapely.geometry import Polygon\n",
     "\n",
-    "\n",
-    "\n",
     "def from_json(labeled_data, coco_output, label_format='WKT'):\n",
     "    \"Writes labelbox JSON export into MS COCO format.\"\n",
     "    # read labelbox JSON output\n",
@@ -157,6 +155,99 @@
     "        }\n",
     "\n",
     "        coco['annotations'].append(annotation)\n",
+    "\n",
+    "\n",
+    "def _get_polygons(label_format, label_data):\n",
+    "    \"Converts segmentation `label: String!` into polygons\"\n",
+    "    if label_format == 'WKT':\n",
+    "        if isinstance(label_data, list):  # V3\n",
+    "            polygons = map(lambda x: wkt.loads(x['geometry']), label_data)\n",
+    "        else:  # V2\n",
+    "            polygons = wkt.loads(label_data)\n",
+    "    elif label_format == 'XY':\n",
+    "        polygons = []\n",
+    "        for xy_list in label_data:\n",
+    "            if 'geometry' in xy_list:  # V3\n",
+    "                xy_list = xy_list['geometry']\n",
+    "\n",
+    "                # V2 and V3\n",
+    "                if not isinstance(xy_list, list):\n",
+    "                    LOGGER.warning('Could not get an point list to construct polygon, skipping')\n",
+    "                    continue\n",
+    "            else:  # V2, or non-list\n",
+    "                if not isinstance(xy_list, list) or not xy_list or 'x' not in xy_list[0]:\n",
+    "                    # skip non xy lists\n",
+    "                    LOGGER.warning('Could not get an point list to construct polygon, skipping')\n",
+    "                    continue\n",
+    "\n",
+    "            if len(xy_list) > 2:  # need at least 3 points to make a polygon\n",
+    "                polygons.append(Polygon(map(lambda p: (p['x'], p['y']), xy_list)))\n",
+    "    else:\n",
+    "        exc = UnknownFormatError(label_format=label_format)\n",
+    "        LOGGER.exception(exc.message)\n",
+    "        raise exc\n",
+    "\n",
+    "\n",
+    "def _get_polygons(label_format, label_data):\n",
+    "    \"Converts segmentation `label: String!` into polygons\"\n",
+    "    if label_format == 'WKT':\n",
+    "        if isinstance(label_data, list):  # V3\n",
+    "            polygons = map(lambda x: wkt.loads(x['geometry']), label_data)\n",
+    "        else:  # V2\n",
+    "            polygons = wkt.loads(label_data)\n",
+    "    elif label_format == 'XY':\n",
+    "        polygons = []\n",
+    "        for xy_list in label_data:\n",
+    "            if 'geometry' in xy_list:  # V3\n",
+    "                xy_list = xy_list['geometry']\n",
+    "\n",
+    "                # V2 and V3\n",
+    "                if not isinstance(xy_list, list):\n",
+    "                    LOGGER.warning('Could not get an point list to construct polygon, skipping')\n",
+    "                    continue\n",
+    "            else:  # V2, or non-list\n",
+    "                if not isinstance(xy_list, list) or not xy_list or 'x' not in xy_list[0]:\n",
+    "                    # skip non xy lists\n",
+    "                    LOGGER.warning('Could not get an point list to construct polygon, skipping')\n",
+    "                    continue\n",
+    "\n",
+    "            if len(xy_list) > 2:  # need at least 3 points to make a polygon\n",
+    "                polygons.append(Polygon(map(lambda p: (p['x'], p['y']), xy_list)))\n",
+    "    else:\n",
+    "        exc = UnknownFormatError(label_format=label_format)\n",
+    "        LOGGER.exception(exc.message)\n",
+    "        raise exc\n",
+    "\n",
+    "\n",
+    "def _get_polygons(label_format, label_data):\n",
+    "    \"Converts segmentation `label: String!` into polygons\"\n",
+    "    if label_format == 'WKT':\n",
+    "        if isinstance(label_data, list):  # V3\n",
+    "            polygons = map(lambda x: wkt.loads(x['geometry']), label_data)\n",
+    "        else:  # V2\n",
+    "            polygons = wkt.loads(label_data)\n",
+    "    elif label_format == 'XY':\n",
+    "        polygons = []\n",
+    "        for xy_list in label_data:\n",
+    "            if 'geometry' in xy_list:  # V3\n",
+    "                xy_list = xy_list['geometry']\n",
+    "\n",
+    "                # V2 and V3\n",
+    "                if not isinstance(xy_list, list):\n",
+    "                    LOGGER.warning('Could not get an point list to construct polygon, skipping')\n",
+    "                    continue\n",
+    "            else:  # V2, or non-list\n",
+    "                if not isinstance(xy_list, list) or not xy_list or 'x' not in xy_list[0]:\n",
+    "                    # skip non xy lists\n",
+    "                    LOGGER.warning('Could not get an point list to construct polygon, skipping')\n",
+    "                    continue\n",
+    "\n",
+    "            if len(xy_list) > 2:  # need at least 3 points to make a polygon\n",
+    "                polygons.append(Polygon(map(lambda p: (p['x'], p['y']), xy_list)))\n",
+    "    else:\n",
+    "        exc = UnknownFormatError(label_format=label_format)\n",
+    "        LOGGER.exception(exc.message)\n",
+    "        raise exc\n",
     "\n",
     "\n",
     "def _get_polygons(label_format, label_data):\n",
