adding annotation vis, tf conversion, finished human annot

--- a/pycocoEvalDemo.ipynb
+++ b/pycocoEvalDemo.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,6 @@
     "import json\n",
     "import logging\n",
     "from typing import Any, Dict\n",
-    "\n",
     "from PIL import Image\n",
     "import requests\n",
     "from shapely import wkt\n",
@@ -192,16 +191,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "output fmt\n",
+    "\n",
+    "rewrite of some functions to transform a ground truth file into a prediction file for quantification of human prediction \n",
+    "vs machine predictions.\n",
+    "\n",
+    "output fmt of prediction file\n",
+    "\n",
     "[{\"image_id\":42,\"category_id\":18,\"bbox\":[258.15,41.29,348.26,243.78],\"score\":0.236},\n",
     "{\"image_id\":73,\"category_id\":11,\"bbox\":[61,22.75,504,609.67],\"score\":0.318}, ... ,\n",
     "{\"image_id\":1292,\"category_id\":47,\"bbox\":[66.74,228.43,32.05,32.89],\"score\":0.097}]\n",
-    "\n",
     "\"\"\"\n",
     "\n",
     "def generate_predfile(labeled_data, coco_annot_output, label_format='XY'):\n",
@@ -284,20 +287,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "json_dir='../comparison'\n",
     "json_name='testexport'\n",
     "json_output='testexportcoco'\n",
-    "from_json('%s/%s.json'%(json_dir, json_name), '%s/%s.json'%(json_dir, json_output), label_format='XY')\n",
-    "\n"
+    "from_json('%s/%s.json'%(json_dir, json_name), '%s/%s.json'%(json_dir, json_output), label_format='XY')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,26 +326,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running demo for *bbox* results.\n"
-     ]
-    }
-   ],
-   "source": [
-    "annType = 'bbox'#specify type here\n",
-    "prefix = 'person_keypoints' if annType=='keypoints' else 'instances'\n",
-    "print ('Running demo for *%s* results.'%(annType))"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +341,7 @@
      "output_type": "stream",
      "text": [
       "loading annotations into memory...\n",
-      "Done (t=0.15s)\n",
+      "Done (t=0.17s)\n",
       "creating index...\n",
       "index created!\n"
      ]
@@ -367,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +365,7 @@
      "output_type": "stream",
      "text": [
       "Loading and preparing results...\n",
-      "DONE (t=0.13s)\n",
+      "DONE (t=0.06s)\n",
       "creating index...\n",
       "index created!\n"
      ]
@@ -389,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "metadata": {
     "scrolled": false
    },
@@ -411,7 +401,7 @@
      "text": [
       "Running per image evaluation...\n",
       "Evaluate annotation type *bbox*\n",
-      "DONE (t=5.88s).\n",
+      "DONE (t=10.51s).\n",
       "Accumulating evaluation results...\n",
       "DONE (t=0.06s).\n",
       " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 1.000\n",
