--- a/pycoc_traintestsplit.ipynb
+++ b/pycoc_traintestsplit.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['__author__', '__builtins__', '__cached__', '__doc__', '__file__', '__loader__', '__name__', '__package__', '__path__', '__spec__', '_mask', 'mask']\n"
+      "['__author__', '__builtins__', '__cached__', '__doc__', '__file__', '__loader__', '__name__', '__package__', '__path__', '__spec__']\n"
      ]
     }
    ],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -207,14 +207,14 @@
    "source": [
     "#train test split percentage\n",
     "split = .25\n",
-    "json_name='../object_detection_retraining/cocofilesv2/export-2019-06-17T08_32_09.254Z_loacl.json'\n",
-    "datadir = '../object_detection_retraining/cocofilesv2/'\n",
+    "json_name='../object-detection/cocofilesv2/export-2019-06-17T08_32_09.254Z_loacl.json'# change here\n",
+    "datadir = '../object-detection/cocofilesv2/'# change here\n",
     "files = from_json(json_name, datadir, label_format='XY' , split = split)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -235,33 +235,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Found groundtruth annotations. Building annotations index.\n",
-      "INFO:tensorflow:0 images are missing annotations.\n",
-      "INFO:tensorflow:On image 0 of 157\n",
-      "INFO:tensorflow:On image 100 of 157\n",
-      "INFO:tensorflow:Finished writing, skipped 76 annotations.\n",
-      "INFO:tensorflow:Found groundtruth annotations. Building annotations index.\n",
-      "INFO:tensorflow:0 images are missing annotations.\n",
-      "INFO:tensorflow:On image 0 of 53\n",
-      "INFO:tensorflow:Finished writing, skipped 48 annotations.\n"
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (create_coco_tf_record.py, line 274)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/usr/local/lib/python3.6/dist-packages/object_detection-0.1-py3.6.egg/object_detection/dataset_tools/create_coco_tf_record.py\"\u001b[0;36m, line \u001b[0;32m274\u001b[0m\n\u001b[0;31m    \"\"\"_create_tf_record_from_coco_annotations(\u001b[0m\n\u001b[0m                                               ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "from object_detection.dataset_tools import create_coco_tf_record\n",
     "\n",
     "for datatype in files:\n",
-    "    create_coco_tf_record._create_tf_record_from_coco_annotations(annotations_file=files[datatype] \n",
-    "    , image_dir=datadir , output_path=files[datatype]+'.record' , include_masks= False, num_shards=1 )\n"
+    "    create_coco_tf_record._create_tf_record_from_coco_annotations(annotations_file=files[datatype], image_dir=datadir , output_path=files[datatype]+'.record' , include_masks= False, num_shards=1)\n"
    ]
   },
   {
@@ -341,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
