--- a/pycocoVisulaize annotations.ipynb
+++ b/pycocoVisulaize annotations.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annFile='../comparison/testexportcoco.json'"
+    "annFile='../comparison/testexportcoco.json' # change here"
    ]
   },
   {
@@ -255,7 +255,7 @@
    "source": [
     "# load and display image\n",
     "imgs = coco.loadImgs(imgIds[0:15])\n",
-    "dataDir = '../object-detection/cocofilesv2/'\n",
+    "dataDir = '../object-detection/cocofilesv2/'# change here\n",
     "for img in imgs:\n",
     "    I = io.imread(dataDir + img['id']+'.jpg')\n",
     "    # use url to load image\n",
